fix: Fixed issue where ordered list numbers in Super would get cut off when using monospace font

--- a/packages/web/src/javascripts/Components/SuperEditor/Lexical/Theme/editor.scss
+++ b/packages/web/src/javascripts/Components/SuperEditor/Lexical/Theme/editor.scss
@@ -268,37 +268,43 @@
   display: inline;
   background-color: #ffbbbb !important;
 }
+:root {
+  --lexical-ordered-list-left-margin: 16px;
+}
+.monospace-font {
+  --lexical-ordered-list-left-margin: 42px;
+}
 .Lexical__ol1 {
   padding: 0;
   margin: 0;
-  margin-left: 16px;
+  margin-left: var(--lexical-ordered-list-left-margin);
   list-style-position: outside;
 }
 .Lexical__ol2 {
   padding: 0;
   margin: 0;
-  margin-left: 16px;
+  margin-left: var(--lexical-ordered-list-left-margin);
   list-style-type: upper-alpha;
   list-style-position: outside;
 }
 .Lexical__ol3 {
   padding: 0;
   margin: 0;
-  margin-left: 16px;
+  margin-left: var(--lexical-ordered-list-left-margin);
   list-style-type: lower-alpha;
   list-style-position: outside;
 }
 .Lexical__ol4 {
   padding: 0;
   margin: 0;
-  margin-left: 16px;
+  margin-left: var(--lexical-ordered-list-left-margin);
   list-style-type: upper-roman;
   list-style-position: outside;
 }
 .Lexical__ol5 {
   padding: 0;
   margin: 0;
-  margin-left: 16px;
+  margin-left: var(--lexical-ordered-list-left-margin);
   list-style-type: lower-roman;
   list-style-position: outside;
 }
